syntax = 'proto3';

package worker;
import "google/protobuf/any.proto";
service WorkerService {
    rpc list (Empty) returns (WorkerResponse);
    rpc create(WorkerBody) returns (WorkerCreateResponse);
    rpc update(WorkerBodyUpdate) returns (WorkerUpdateResponse);
    rpc delete(WorkerDelete) returns (Empty);
}

message Empty {}

message WorkerDelete {
    int32 id = 1;
    google.protobuf.Any user = 3;
}
  
message WorkerResponse {
    repeated Worker data = 3;
}

message Worker {
    int32 worker_id = 1;
    string worker_name = 2;
    int32 price = 3;
}

message WorkerBody {
    string worker_name = 1;
    int32 price = 2;
    google.protobuf.Any user = 3;
}
message WorkerBodyUpdate {
    string worker_name = 1;
    int32 price = 2;
    int32 id = 3;
    google.protobuf.Any user = 4;
}

message WorkerCreateResponse{
    int32 worker_id = 1;
    string worker_name = 2;
    int32 price = 3;
    string created_at = 4;
}

message WorkerUpdateResponse{
    int32 worker_id = 1;
    string worker_name = 2;
    int32 price = 3;
    string created_at = 4;
    string updated_at = 5;
}

